Added filter logic for severity!

--- a/map.html
+++ b/map.html
@@ -9,6 +9,14 @@
 </style>
 
 <body>
+  <div id="controls">
+    <label for="severityFilter">Filter by severity:</label>
+    <select id="severityFilter">
+      <option value="all">All</option>
+      <option value="2">Severity 2</option>
+      <option value="4">Severity 4</option>
+    </select>
+  </div>
   <svg></svg>
 </body>
 
@@ -26,7 +34,7 @@
 
 
   //projection coverts geojson coords to svg coords
-  var projection = d3.geoAlbersUsa().scale(800)
+  var projection = d3.geoAlbersUsa().scale(4000).translate([width/20 - 400, height/20 - 400])
 
   //geopath coverts geojson geometry to svg path
   //projection here is func we use to convert geometry points into svg points
@@ -36,8 +44,8 @@
   var statesLayer = svg.append("g").attr("class", "states");
 
 
-  //grab the json file and execute function with resulting data
-  d3.json("map.json").then(function(us) {
+  //grab the map json file and execute function with resulting data
+  d3.json("FLmap.json").then(function(us) {
     //inside of the svg layer we made we will select all paths (on first pass this is none)
     statesLayer.selectAll("path")
       //then we bind the path objects to our features
@@ -53,13 +61,26 @@
       .attr("opacity", 0.7)
   })
 
+  var allPoints = [];
+
   var crashesLayer = svg.append("g").attr("class", "crashes");
-  d3.json("data.json").then(function(points) {
-    //this is essentially the update step?
-    crashesLayer.selectAll("circle")
-      .data(points.features)
-      .enter()
-      .append("circle")
+  //grab the data json file and execute function with resulting data
+  d3.json("FLdata.json").then(function(points) {
+    //grab the array of features
+    allPoints = points.features
+    renderPoints(allPoints)
+    setupFilter()
+  }).catch(error => {
+    console.error("Error loading:", error);
+  });
+
+  // function that (re)draws the circles based on a given dataset
+  function renderPoints(data) {
+    crashesLayer
+      //grab all curcles from the svg and bind them to the features (passed in data)
+      .selectAll("circle").data(data)
+      //draw a curcle at the specified coordinates
+      .join("circle")
       .attr("cx", d => projection(d.geometry.coordinates)[0])
       .attr("cy", d => projection(d.geometry.coordinates)[1])
       .attr("r", 1)
@@ -70,19 +91,28 @@
         d3.select(this)
           .attr("fill", "red")
           .attr("stroke", "red")
-          .attr("r", 4)
+          .attr("r", 4);
       })
       .on("mouseout", function() {
         d3.select(this)
           .attr("stroke", "#666666")
           .attr("fill", "#888888")
-          .attr("r", 1)
+          .attr("r", 1);
       });
-  }).catch(error => {
-    console.error("Error loading:", error);
-  })
+  }
 
+  // connect the dropdown menu to the visualization
+  function setupFilter() {
+    d3.select("#severityFilter").on("change", function() {
+      var selected = this.value;
+
+      var filtered = selected === "all"
+        ? allPoints
+        : allPoints.filter(d => String(d.properties.severity) === selected);
+
+      renderPoints(filtered);
+    });
+  }
 </script>
-
 
 </html>
