--- a/map.html
+++ b/map.html
@@ -24,15 +24,18 @@
 
 <script>
 
+
+  //        ------------------------ SET UP canvas --------------------------
   var margin = {top: 20, right: 20, bottom: 20, left: 20},
       width = +400- margin.left - margin.right,
-    height = +400 - margin.top - margin.bottom
+      height = +400 - margin.top - margin.bottom
 
   var svg = d3.select("svg") 
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
 
 
+  //        ------------------------ SET UP OUR GEOJSON Layer --------------------------
   //projection coverts geojson coords to svg coords
   var projection = d3.geoAlbersUsa().scale(4000).translate([width/20 - 400, height/20 - 400])
 
@@ -40,41 +43,85 @@
   //projection here is func we use to convert geometry points into svg points
   var path = d3.geoPath().projection(projection);
 
-  //make group inside of main svg to hold empty map
+
+  //        ------------------------ SET UP OUR Map Layer --------------------------
   var statesLayer = svg.append("g").attr("class", "states");
-
-
-  //grab the map json file and execute function with resulting data
   d3.json("FLmap.json").then(function(us) {
     //inside of the svg layer we made we will select all paths (on first pass this is none)
     statesLayer.selectAll("path")
       //then we bind the path objects to our features
       .data(us.features)
-      //now we enter the new data
-      .enter()
-      //this only matters the first time bc there will be no
-      .append("path")
+      //now we enter the new data and append a path for each feature 
+      .enter().append("path")
       //styling for the path
       .attr("d", path)
       .attr("stroke", "#000000")
       .attr("fill", "#ffffff")
       .attr("opacity", 0.7)
+      //new handler for clicking on county 
+      .on("click", countyClicked)
   })
 
-  var allPoints = [];
+    //        ------------------------ SET UP OUR Crashes Layer --------------------------
+
+  var allPoints = []
 
   var crashesLayer = svg.append("g").attr("class", "crashes");
   //grab the data json file and execute function with resulting data
   d3.json("FLdata.json").then(function(points) {
     //grab the array of features
     allPoints = points.features
-    renderPoints(allPoints)
-    setupFilter()
+    updateAndFilterPoints()
   }).catch(error => {
     console.error("Error loading:", error);
   });
 
-  // function that (re)draws the circles based on a given dataset
+
+    //        ------------------------ SET UP  handelrs  --------------------------
+  let activeCounty = null;
+  function countyClicked(event, county) {
+    //this keyword gfrabs the dom element clikced
+    const countyElement = this;
+    //if county is active and the same as the county clicked we zoom out
+    if (activeCounty && activeCounty === county) {
+      // zoom out 
+      statesLayer.transition().duration(750).attr("transform", "");
+      crashesLayer.transition().duration(750).attr("transform", "");
+      activeCounty = null;
+      updateAndFilterPoints();
+    } else {
+      activeCounty = county;
+      //get bounds of country from the path
+      boundingbox = countyElement.getBBox();
+      const x0 = boundingbox.x;
+      const y0 = boundingbox.y;
+      const y1 = boundingbox.y + boundingbox.height;
+      const x1 = boundingbox.x + boundingbox.width;
+      
+      //center point
+      const x = x0 + (boundingbox.width / 2);
+      const y = y0 + (boundingbox.height / 2);
+
+      //scale the map to the bounding box
+      const scale = 1 / Math.max(boundingbox.width / width, boundingbox.height / height);
+      //make center of the map the cnenter of the bounding box something wrong w this logic?
+      const translate = [width / 2 - scale * x, height / 2 - scale * y];
+
+      const transformString = `
+        translate(${translate})
+        scale(${scale})
+      `
+      statesLayer.transition().duration(750).attr("transform", transformString);
+      crashesLayer.transition().duration(750).attr("transform", transformString);
+
+      updateAndFilterPoints();
+    }
+  }
+
+
+      //        ------------------------ SET UP  helpers  --------------------------
+
+  // function that draws the circles based on a given dataset
   function renderPoints(data) {
     crashesLayer
       //grab all curcles from the svg and bind them to the features (passed in data)
@@ -101,16 +148,31 @@
       });
   }
 
+  let currentSeverity = "all";
+  
+  function updateAndFilterPoints() {
+    let filteredPoints = allPoints;
+
+    //filter by active county
+    if (activeCounty) {
+      filteredPoints = filteredPoints.filter(point => d3.geoContains(activeCounty, point.geometry.coordinates));
+    }
+
+    //filter by severity
+    if (currentSeverity !== "all") {
+      filteredPoints = filteredPoints.filter(point => String(point.properties.severity) === currentSeverity);
+    }
+
+    renderPoints(filteredPoints);
+  }
+
+  setupFilter();
   // connect the dropdown menu to the visualization
   function setupFilter() {
     d3.select("#severityFilter").on("change", function() {
-      var selected = this.value;
-
-      var filtered = selected === "all"
-        ? allPoints
-        : allPoints.filter(d => String(d.properties.severity) === selected);
-
-      renderPoints(filtered);
+      currentSeverity = this.value;
+      console.log(currentSeverity);
+      updateAndFilterPoints();
     });
   }
 </script>
