added tooltip (just showing severity for now)

--- a/index.html
+++ b/index.html
@@ -61,6 +61,17 @@
 		let currentTime = 0;
 		let filterByTime = false;
 
+		// creating a tooltip
+		var tooltip = d3
+			.select('body')
+			.append('div')
+			.style('position', 'absolute')
+			.style('visibility', 'hidden')
+			.style('background-color', 'white')
+			.style('border', 'solid')
+			.style('border-width', '1px')
+			.style('padding', '10px');
+
 		// ------------------------ LOAD IN AND PRE-PROCESS DATA ------------------------
 		d3.json('FLmap.json')
 			.then(function (us) {
@@ -181,17 +192,26 @@
 				.attr('stroke', '#666666')
 				.attr('fill', '#888888')
 				.attr('opacity', 0.7)
-				.on('mouseover', function () {
+				.on('mouseover', function (event, data) {
 					d3.select(this)
 						.attr('fill', 'red')
 						.attr('stroke', 'red')
 						.attr('r', 4);
+
+					tooltip.html(data.properties.severity);
+
+					tooltip.style('visibility', 'visible');
+					tooltip
+						.style('top', event.offsetY - 15 + 'px')
+						.style('left', event.offsetX + 15 + 'px');
 				})
-				.on('mouseout', function () {
+				.on('mouseout', function (event, data) {
 					d3.select(this)
 						.attr('stroke', '#666666')
 						.attr('fill', '#888888')
 						.attr('r', 1);
+
+					tooltip.style('visibility', 'hidden');
 				});
 		}
 
