Trying to host.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<svg></svg>
 	</body>
 
-	<script src="http://d3js.org/d3.v6.min.js"></script>
+	<script src="https://d3js.org/d3.v6.min.js"></script>
 
 	<script>
 		// ------------------------ SET UP canvas --------------------------
